--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </a>
       <nav class="navigation">
         <h2 class="visually-hidden">Пользовательская навигация</h2>
-        <ul class="navigation-list">
+        <ul class="navigation-user">
           <li class="navigation-item">
             <form
               class="search-form"
@@ -46,7 +46,7 @@
             <a class="navigation-link" href="#">Корзина</a>
           </li>
         </ul>
-        <ul class="navigation-list navigation-main">
+        <ul class="navigation-main">
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог товаров</a>
           </li>
@@ -124,7 +124,7 @@
             <a class="product-link" href="#">
               <img
                 class="vr-image"
-                src="/images/vr.png"
+                src="images/vr.png"
                 width="160"
                 height="160"
                 alt="Изображение очков vr"
@@ -136,7 +136,7 @@
             <a class="product-link" href="catalog.html">
               <img
                 class="selfie-image"
-                src="/images/selfie.png"
+                src="images/selfie.png"
                 width="160"
                 height="160"
                 alt="Изображение монопода для селфи"
@@ -148,7 +148,7 @@
             <a class="product-link" href="#">
               <img
                 class="cam-image"
-                src="/images/action-cam.png"
+                src="images/action-cam.png"
                 width="160"
                 height="160"
                 alt="Изображение экшн-камеры'"
@@ -160,7 +160,7 @@
             <a class="product-link" href="#">
               <img
                 class="fit-image"
-                src="/images/fit-bracelet.png"
+                src="images/fit-bracelet.png"
                 width="160"
                 height="160"
                 alt="Изображение фитнес-браслета'"
@@ -172,7 +172,7 @@
             <a class="product-link" href="#">
               <img
                 class="watch-image"
-                src="/images/fit-bracelet.png"
+                src="images/fit-bracelet.png"
                 width="160"
                 height="160"
                 alt="Изображение умных часов'"
@@ -184,7 +184,7 @@
             <a class="product-link" href="#">
               <img
                 class="cam-image"
-                src="/images/copter-small.png"
+                src="images/copter-small.png"
                 width="160"
                 height="160"
                 alt="Изображение квадрокоптера"
