--- a/4/index.html
+++ b/4/index.html
@@ -20,7 +20,7 @@
       </a>
       <nav class="navigation">
         <h2 class="visually-hidden">Пользовательская навигация</h2>
-        <ul class="navigation-list">
+        <ul class="navigation-user">
           <li class="navigation-item">
             <form
               class="search-form"
@@ -47,7 +47,7 @@
             <a class="navigation-link" href="#">Корзина</a>
           </li>
         </ul>
-        <ul class="navigation-list navigation-main">
+        <ul class="navigation-main">
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог товаров</a>
           </li>
@@ -125,7 +125,7 @@
             <a class="product-link" href="#">
               <img
                 class="vr-image"
-                src="/images/vr.png"
+                src="images/vr.png"
                 width="160"
                 height="160"
                 alt="Изображение очков vr"
@@ -137,7 +137,7 @@
             <a class="product-link" href="catalog.html">
               <img
                 class="selfie-image"
-                src="/images/selfie.png"
+                src="images/selfie.png"
                 width="160"
                 height="160"
                 alt="Изображение монопода для селфи"
@@ -149,7 +149,7 @@
             <a class="product-link" href="#">
               <img
                 class="cam-image"
-                src="/images/action-cam.png"
+                src="images/action-cam.png"
                 width="160"
                 height="160"
                 alt="Изображение экшн-камеры'"
@@ -161,7 +161,7 @@
             <a class="product-link" href="#">
               <img
                 class="fit-image"
-                src="/images/fit-bracelet.png"
+                src="images/fit-bracelet.png"
                 width="160"
                 height="160"
                 alt="Изображение фитнес-браслета'"
@@ -173,7 +173,7 @@
             <a class="product-link" href="#">
               <img
                 class="watch-image"
-                src="/images/fit-bracelet.png"
+                src="images/fit-bracelet.png"
                 width="160"
                 height="160"
                 alt="Изображение умных часов'"
@@ -185,7 +185,7 @@
             <a class="product-link" href="#">
               <img
                 class="cam-image"
-                src="/images/copter-small.png"
+                src="images/copter-small.png"
                 width="160"
                 height="160"
                 alt="Изображение квадрокоптера"
