--- a/4/index.html
+++ b/4/index.html
@@ -7,8 +7,8 @@
     <base href="https://htmlacademy-htmlcss.github.io/2062283-device-34/4/">
 </head>
   <body>
-    <header class="main-header">
-      <h1 class="visually-hidden">Девайс</h1>
+    <header class="header-container main-header">
+      <h1 class="visually-hidden">Девайс.</h1>
       <a class="logo" href="index.html">
         <img
           class="page-header-logo"
@@ -18,8 +18,8 @@
           alt="Логотип магазина"
         />
       </a>
-      <nav class="navigation">
-        <h2 class="visually-hidden">Пользовательская навигация</h2>
+      <nav class="navigation-container navigation">
+        <h2 class="visually-hidden">Пользовательская навигация.</h2>
         <ul class="navigation-user">
           <li class="navigation-item">
             <form
@@ -53,7 +53,7 @@
           </li>
           <li>
             <a class="button catalog-button" href="catalog.html">
-              <span class="visually-hidden">Кнопка раскрытия каталога</span>
+              <span class="visually-hidden">Кнопка раскрытия каталога.</span>
             </a>
           </li>
           <li>
@@ -68,9 +68,9 @@
         </ul>
       </nav>
     </header>
-    <main class="main-index">
+    <main class="main-container main-index">
       <section class="sliders">
-        <h2 class="visually-hidden">Изображения Квадрокоптеров</h2>
+        <h2 class="visually-hidden">Изображения Квадрокоптеров.</h2>
         <img
           class="slider-image"
           src="images/copter.png"
@@ -79,10 +79,10 @@
           alt="Квадрокоптеры"
         />
         <button class="slider-button slider-prev" type="button">
-          <span class="visually-hidden">Предыдущий товар</span>
+          <span class="visually-hidden">Предыдущий товар.</span>
         </button>
         <button class="slider-button slider-next" type="button">
-          <span class="visually-hidden">Следующий товар</span>
+          <span class="visually-hidden">Следующий товар.</span>
         </button>
         <h2 class="advantage-title">Порхает как бабочка, жалит, как пчела</h2>
         <p class="advantage-description">
@@ -92,17 +92,17 @@
         <ul class="slider-pagination">
           <li class="slider-pagination-item">
             <button class="slider-pagination-button-current" type="button">
-              <span class="visually-hidden">1 описание</span>
+              <span class="visually-hidden">1 описание.</span>
             </button>
           </li>
           <li class="slider-pagination-item">
             <button class="slider-pagination-button" type="button">
-              <span class="visually-hidden">2 описание</span>
+              <span class="visually-hidden">2 описание.</span>
             </button>
           </li>
           <li class="slider-pagination-item">
             <button class="slider-pagination-button" type="button">
-              <span class="visually-hidden">3 описание</span>
+              <span class="visually-hidden">3 описание.</span>
             </button>
           </li>
         </ul>
@@ -112,14 +112,14 @@
             <b class="spec-range">800 м</b>
             <span class="range-name">Дальность полета</span>
           </li>
-          <li>
+          <li class="spec-item">
             <b class="spec-radius">50 м</b>
             <span class="radius-name">Радиус поражения</span>
           </li>
         </ul>
       </section>
       <section class="products">
-        <h3 class="visually-hidden">Категории товаров</h3>
+        <h3 class="visually-hidden">Категории товаров.</h3>
         <ul class="products-list">
           <li class="product-item">
             <a class="product-link" href="#">
@@ -130,7 +130,7 @@
                 height="160"
                 alt="Изображение очков vr"
               />
-              <span>Виртуальная реальность</span>
+              <span class="product-name">Виртуальная реальность</span>
             </a>
           </li>
           <li class="product-item">
@@ -142,7 +142,7 @@
                 height="160"
                 alt="Изображение монопода для селфи"
               />
-              <span>Моноподы для селфи</span>
+              <span class="product-name">Моноподы для селфи</span>
             </a>
           </li>
           <li class="product-item">
@@ -154,7 +154,7 @@
                 height="160"
                 alt="Изображение экшн-камеры'"
               />
-              <span>Экшн-камеры</span>
+              <span class="product-name">Экшн-камеры</span>
             </a>
           </li>
           <li class="product-item">
@@ -166,7 +166,7 @@
                 height="160"
                 alt="Изображение фитнес-браслета'"
               />
-              <span>Фитнес-браслеты</span>
+              <span class="product-name">Фитнес-браслеты</span>
             </a>
           </li>
           <li class="product-item">
@@ -178,7 +178,7 @@
                 height="160"
                 alt="Изображение умных часов'"
               />
-              <span>Умные часы</span>
+              <span class="product-name">Умные часы</span>
             </a>
           </li>
           <li class="product-item">
@@ -190,13 +190,13 @@
                 height="160"
                 alt="Изображение квадрокоптера"
               />
-              <span>Квадрокоптеры</span>
+              <span class="product-name">Квадрокоптеры</span>
             </a>
           </li>
         </ul>
       </section>
       <section class="services">
-        <h2 class="visually-hidden">Услуги</h2>
+        <h2 class="visually-hidden">Услуги.</h2>
         <ul class="services-list">
           <li class="services-item">
             <a class="button button-delivery" href="#">Доставка</a>
@@ -205,12 +205,12 @@
             <a class="button button-warranty" href="#">Гарантия</a>
           </li>
           <li class="services-item">
-            <a class="button button-contacts" href="#">Кредит</a>
+            <a class="button button-credit" href="#">Кредит</a>
           </li>
         </ul>
       </section>
       <section class="delivery">
-        <h2 class="delivery-title" id="delivery">Доставка</h2>
+        <h2 class="title delivery-title" id="delivery">Доставка</h2>
         <p>
           Мы с удовольствием доставим ваш товар прямо<br />
           к вашему подъезду совершенно бесплатно! Ведь <br />
@@ -219,7 +219,7 @@
       </section>
       <div class="delivery-notice">Доставим редкий товар под заказ</div>
       <section class="about">
-        <h2 class="about-title">О нас</h2>
+        <h2 class="title about-title">О нас</h2>
         <p class="about-description">
           Огромный выбор гаджетов не оставит равнодушным<br />
           гика, который есть в каждом из нас.
@@ -233,10 +233,10 @@
           <li class="about-delivery-description-item"><b>СДИК</b></li>
           <li class="about-delivery-description-item"><b>ТоксБерри</b></li>
         </ul>
-        <a class="more-about">Подробнее о нас</a>
+        <a class="more-about" href="#">Подробнее о нас</a>
       </section>
       <section class="contacts">
-        <h2 class="contacts-title" id="contacts">Контакты</h2>
+        <h2 class="title contacts-title" id="contacts">Контакты</h2>
         <p class="contacts-description">
           Вы можете забрать товар сами, заехав в наш офис.<br />
           Заодно сможете проверить работоспособность покупки.
@@ -245,16 +245,16 @@
         <address class="contacts-address">
           Санкт-Петербург, набережная реки Карповки, 5, литера П.
         </address>
-        <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a class="contacts-phone" href="tel:+78128121212">Тел.:+7 (812) 812-12-12</a>
         <b class="contacts-subtitle">Время работы</b>
         <ul class="contacts-schedule">
           <li class="schedule-item">пн—пт: с 10:00 до 22:00</li>
           <li class="schedule-item">сб—вс: с 10:00 до 19:00</li>
         </ul>
-        <a class="contact-us">Напишите нам</a>
+        <a class="contact-us" href="#">Напишите нам</a>
       </section>
       <section class="newsletter">
-        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <h2 class="title newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-description">
           Еженедельный дайджест с обзорами новинок,<br />
           длительными тест-драйвами, распаковками, а также акции,<br />
@@ -279,7 +279,7 @@
     </main>
     <footer class="page-footer">
       <section class="footer-address">
-        <h3 class="visually-hidden">Адрес</h3>
+        <h3 class="visually-hidden">Адрес.</h3>
         <a href="index.html">
           <img
             class="site-logo"
@@ -289,14 +289,14 @@
             alt="Логотип сайта"
           />
         </a>
-        <address class="contacts-address">
+        <address class="contacts-footer">
           <p class="contacts-address-text">
             Санкт-Петербург, набережная реки Карповки, 5, литера П.
           </p>
         </address>
       </section>
       <section class="footer-services">
-        <h3 class="visually-hidden">Услуги</h3>
+        <h3 class="visually-hidden">Услуги.</h3>
         <ul class="footer-services-list">
           <li>
             <a class="services-item-link" href="#">Доставка</a>
@@ -319,9 +319,9 @@
                 src="images/telegram.svg"
                 width="14"
                 height="12"
-                alt="иконка телеграм"
+                alt="иконка телеграм."
               />
-              <span class="visually-hidden">Телеграм</span></a
+              <span class="visually-hidden">Телеграм.</span></a
             >
           </li>
           <li class="footer-social-item">
@@ -334,9 +334,9 @@
                 src="images/youtube.svg"
                 width="16"
                 height="11"
-                alt="иконка youtube"
+                alt="Иконка youtube."
               />
-              <span class="visually-hidden">YouTube</span></a
+              <span class="visually-hidden">YouTube.</span></a
             >
           </li>
           <li class="footer-social-item">
@@ -349,23 +349,23 @@
                 src="images/twitter.svg"
                 width="15"
                 height="14"
-                alt="иконка twitter"
+                alt="Иконка twitter."
               />
-              <span class="visually-hidden">Twitter</span></a
+              <span class="visually-hidden">Twitter.</span></a
             >
           </li>
         </ul>
       </section>
       <section class="footer-phone-number">
-        <h3 class="visually-hidden">Номер телефона</h3>
-        <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <h3 class="visually-hidden">Номер телефона.</h3>
+        <a class="contacts-phone-footer" href="tel:+78128121212">Тел.:+7 (812) 812-12-12</a>
         <a href="https://htmlacademy.ru/">
           <img
             class="academy-logo"
             src="images/html.svg"
             width="115"
             height="33"
-            alt="Логотип академии"
+            alt="Логотип академии."
           />
         </a>
       </section>
