Исправляет ошибку в кнопке каталога

--- a/catalog.html
+++ b/catalog.html
@@ -49,11 +49,10 @@
         <ul class="navigation-main">
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог товаров</a>
-          </li>
-          <li>
-            <a class="button catalog-button" href="catalog.html">
+            <button class="button catalog-button" href="catalog.html">
               <span class="visually-hidden">Кнопка раскрытия каталога.</span>
             </a>
+          </li>
           </li>
           <li>
             <a class="navigation-link" href="#delivery">Доставка</a>
