Исправляет ошибки в сетках

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/outlines.css"/>
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header container">
       <div class="header-wrapper">
       <h1 class="visually-hidden">Девайс.</h1>
       <a class="logo" href="index.html">
@@ -19,7 +19,7 @@
           alt="Логотип магазина"
         />
       </a>
-      <nav class="navigation">
+      <nav class="navigation container">
         <h2 class="visually-hidden">Пользовательская навигация.</h2>
         <ul class="navigation-user">
           <div class="nav-wrapper-user">
@@ -73,7 +73,7 @@
     </div>
     </header>
     <main class="main-index">
-      <section class="best-product-container">
+      <section class="best-product-container container">
         <div class="slider-container">
         <button class="slider-button slider-prev" type="button">
           <span class="visually-hidden">Предыдущий товар.</span>
@@ -128,7 +128,7 @@
         </ul>
       </div>
       </section>
-      <section>
+      <section class="container">
         <h3 class="visually-hidden">Категории товаров.</h3>
         <ul class="products-list">
           <div class="products-container">
@@ -233,7 +233,7 @@
       </div>
       </section>
       <div class="delivery-notice">Доставим редкий товар под заказ</div>
-      <section class="about-container">
+      <section class="about-container container">
         <div class="about-wrapper">
         <h2 class="title about-title">О нас</h2>
         <p class="about-description">
@@ -296,6 +296,7 @@
     </main>
     <footer class="page-footer">
       <section class="footer-menu">
+        <h3 class="visually-hidden">Услуги и контакты</h3>
         <a href="index.html">
           <img
             class="site-logo"
@@ -313,7 +314,6 @@
           </p>
         </address>
         <h3 class="visually-hidden">Услуги.</h3>
-        <div class="footer-services-wrapper">
         <ul class="footer-services-list">
           <li>
             <a class="services-item-link" href="#">Доставка</a>
@@ -325,7 +325,6 @@
             <a class="services-item-link" href="#">Контакты</a>
           </li>
         </ul>
-      </div>
         <h3 class="visually-hidden">Номер телефона.</h3>
         <a class="contacts-phone-footer" href="tel:+78128121212">Тел.:+7 (812) 812-12-12</a>
       </div>
@@ -377,6 +376,15 @@
             >
           </li>
         </ul>
+        <a class="academy-logo" href="https://htmlacademy.ru/">
+          <img
+            class="academy-logo"
+            src="images/html.svg"
+            width="115"
+            height="33"
+            alt="Логотип академии."
+          />
+        </a>
       </div>
       </section>
     </footer>
