Исправляет ошибки в сетках

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           Мы с удовольствием доставим ваш товар прямо<br />
           к вашему подъезду совершенно бесплатно! Ведь <br />
           мы неплохо заработаем, поднимая его на ваш этаж.
-        </p>,
+        </p>
         </div>
       </div>
       </section>
@@ -271,6 +271,7 @@
         </div>
       </section>
       <section class="newsletter">
+        <div class="newsletter-wrapper container">
         <h2 class="title newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-description">
           Еженедельный дайджест с обзорами новинок,<br />
@@ -292,6 +293,7 @@
           <button class="button subscribe-button">Подписаться</button>
         </form>
         <span class="warning">Это бесплатно</span>
+      </div>
       </section>
     </main>
     <footer class="page-footer">
