Исправляет ошибки в сетках

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <title>HTML Academy: Девайс</title>
     <link rel="stylesheet" href="styles/styles.css"/>
-    <link rel="stylesheet" href="styles/outlines.css"/>
   </head>
   <body>
     <header class="main-header container">
@@ -207,7 +206,7 @@
         </ul>
       </section>
       <section class="services">
-        <div class="services-main-container">
+        <div class="services-main-container container">
         <h2 class="visually-hidden">Услуги.</h2>
         <div class="services-list-wrapper">
         <ul class="services-list">
@@ -308,7 +307,7 @@
             alt="Логотип сайта"
           />
         </a>
-        <div class="footer-menu-wrapper">
+        <div class="footer-menu-wrapper container">
         <h3 class="visually-hidden">Адрес.</h3>
         <address class="contacts-footer">
           <p class="contacts-address-text">
