Исправляет ошибки в сетках

--- a/index.html
+++ b/index.html
@@ -332,7 +332,8 @@
       </section>
       <section class="footer-social">
         <h3 class="visually-hidden">Мы в соцсетях</h3>
-        <div class="footer-social-wrapper">
+        <div class="footer-social-wrapper container">
+          <span class="social-rectangle">Контентный прямоугольник></span>
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="button button-social" href="t.me/htmlacademy">
