:heavy_check_mark: Сборка #5

--- a/5/index.html
+++ b/5/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <title>HTML Academy: Девайс</title>
     <link rel="stylesheet" href="styles/styles.css"/>
-    <link rel="stylesheet" href="styles/outlines.css"/>
     <base href="https://htmlacademy-htmlcss.github.io/2062283-device-34/5/">
 </head>
   <body>
@@ -208,7 +207,7 @@
         </ul>
       </section>
       <section class="services">
-        <div class="services-main-container">
+        <div class="services-main-container container">
         <h2 class="visually-hidden">Услуги.</h2>
         <div class="services-list-wrapper">
         <ul class="services-list">
@@ -309,7 +308,7 @@
             alt="Логотип сайта"
           />
         </a>
-        <div class="footer-menu-wrapper">
+        <div class="footer-menu-wrapper container">
         <h3 class="visually-hidden">Адрес.</h3>
         <address class="contacts-footer">
           <p class="contacts-address-text">
@@ -334,7 +333,8 @@
       </section>
       <section class="footer-social">
         <h3 class="visually-hidden">Мы в соцсетях</h3>
-        <div class="footer-social-wrapper">
+        <div class="footer-social-wrapper container">
+          <span class="social-rectangle">Контентный прямоугольник></span>
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="button button-social" href="t.me/htmlacademy">
