Исправляет ошибки в мелких сетках

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
               />
             </a>
             <h2 class="visually-hidden">Пользовательская навигация.</h2>
-            <ul class="navigation-user">
-              <div class="nav-wrapper-user">
+            <div class="nav-wrapper-user">
+              <ul class="navigation-user">
                 <li class="navigation-item">
                   <form
                     class="search-form"
@@ -42,43 +42,38 @@
                 <li class="navigation-item">
                   <a class="button login-button" href="#">Войти</a>
                 </li>
-                <div class="compare-cart-wrapper">
-                  <li class="navigation-item">
-                    <a class="navigation-link" href="#">Сравнить</a>
-                  </li>
-                  <li class="navigation-item">
-                    <a class="navigation-link" href="#">Корзина</a>
-                  </li>
-                </div>
-              </div>
-            </ul>
-            <ul class="navigation-main">
-              <div class="nav-main-wrapper">
+              </ul>
+              <ul class="compare-cart">
                 <li class="navigation-item">
-                  <a class="navigation-link" href="catalog.html"
+                  <a class="navigation-link" href="#">Сравнить</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="#">Корзина</a>
+                </li>
+              </ul>
+            </div>
+            <div class="nav-main-wrapper">
+                  <a class="nav-catalog-link" href="catalog.html"
                     >Каталог товаров</a
                   >
                   <button
                     class="button catalog-button"
-                    href="catalog.html"
                   ></button>
                   <span class="visually-hidden"
                     >Кнопка раскрытия каталога.</span
                   >
+                <ul class="nav-menu">
+                <li>
+                  <a class="navigation-link" href="#delivery">Доставка</a>
                 </li>
-                <div class="menu-wrapper">
-                  <li>
-                    <a class="navigation-link" href="#delivery">Доставка</a>
-                  </li>
-                  <li>
-                    <a class="button navigation-button" href="#">Гарантия</a>
-                  </li>
-                  <li>
-                    <a class="navigation-link" href="#contacts">Контакты</a>
-                  </li>
-                </div>
-              </div>
-            </ul>
+                <li>
+                  <a class="button navigation-button" href="#">Гарантия</a>
+                </li>
+                <li>
+                  <a class="navigation-link" href="#contacts">Контакты</a>
+                </li>
+              </ul>
+            </div>
           </nav>
         </div>
       </div>
@@ -108,8 +103,8 @@
             замаскированным под стандартную камеру.
           </p>
           <div class="pagination-container">
-            <ul class="slider-pagination">
-              <div class="pagination-wrapper">
+            <div class="pagination-wrapper">
+              <ul class="slider-pagination">
                 <li class="slider-pagination-item">
                   <button
                     class="slider-pagination-button-current"
@@ -128,8 +123,8 @@
                     <span class="visually-hidden">3 описание.</span>
                   </button>
                 </li>
-              </div>
-            </ul>
+              </ul>
+            </div>
             <a class="button button-more" href="#">Подробнее</a>
           </div>
           <ul class="spec-list">
