Исправляет ошибки в микросетках каталога

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <body>
     <header class="container">
       <div class="header-menu-container">
-        <div class="header-wrapper">
+        <div class="header-wrapper-catalog">
           <h1 class="visually-hidden">Девайс.</h1>
           <nav class="navigation-container">
             <a class="logo" href="index.html">
@@ -267,10 +267,10 @@
                 <b class="product-card-price">1 500р</b>
               </li>
             </ul>
-          </div>
             <button class="button pagination-show-more" type="button">
               Загрузить еще
             </button>
+            <div class="pagination-cat-wrapper container">
             <ul class="pagination">
               <li class="pagination-text">
                 <a class="pagination-link pagination-prev pagination-disabled"
@@ -300,6 +300,8 @@
                 >
               </li>
             </ul>
+          </div>
+          </div>
           </div>
         </div>
       </section>
